fix: scaling background image on mobile

--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -39,11 +39,10 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: none;
-  transition: 0.3s;
+}
 
-  &_fixed {
-    background-attachment: initial;
-    background-attachment: fixed;
+@media (max-width: $laptop) {
+  .bg {
+    background-size: 1400px auto;
   }
 }
